[package]
name = "rust-os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# we can't use os dependent libraries
[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
             "-display", "none"]
test-success-exit-code = 33
test-timeout= 10

[[test]]
name = "should-panic"
harness = false

# [dependencies.lazy_static]
# version = "1.0"
# features = ["spin_no_std"]

# profile used for `cargo build`
# [profile.dev]
# panic = "abort" # disable stack unwinding
#
# # profile used for `cargo build --release`
# [profile.release]
# panic = "abort" # disable stack unwinding
